add depression notes

--- a/notes.org
+++ b/notes.org
@@ -3050,7 +3050,7 @@ Notes from
 - Top Layer: 
   Main Structure Notes and Double Hashes
 
-** How to Read and Write                             :writing:notes:@reading:
+** How to Read and Write                                   :writing:@reading:
 :PROPERTIES:
 :EXPORT_FILE_NAME: how-to-read-and-write
 :EXPORT_DATE: 2020-10-29
@@ -3275,6 +3275,43 @@ paper can be rewarding if it forces you to explain concepts afresh in a new cont
 [[https://www.gwern.net/About#writing-checklist][Gwern's writing checklist]]
 [[https://www.nngroup.com/articles/how-people-read-online/][
 How people read online]]
+
+** Depression                                    :depression:mental:@reading:
+:PROPERTIES:
+:EXPORT_FILE_NAME: depression
+:EXPORT_DATE: 2020-12-10
+:EXPORT_HUGO_SECTION: reading
+:EXPORT_DESCRIPTION: Notes about depression.
+:EXPORT_OPTIONS: toc:2
+:END:
+
+[[https://www.youtube.com/watch?v=8Su5VtKeXU8][How To Cope With Depression]]
+
+[[https://www.ted.com/talks/johann_hari_this_could_be_why_you_re_depressed_or_anxious/transcript][TED: This could be why you're depressed or anxious]]
+
+> In a moving talk, journalist Johann Hari shares fresh insights 
+on the causes of depression and anxiety from experts 
+around the world -- as well as some exciting emerging solutions. 
+"If you're depressed or anxious, you're not weak and 
+you're not crazy, you're not, in the main, a machine with broken parts
+ -- you're a human being with unmet needs," Hari says.
+
+> We feel this way for reasons, and they can be hard to see 
+in the throes of depression -- I understand that really well 
+from personal experience. But with the right help, we can 
+understand these problems and we can fix these problems together. 
+But to do that, the very first step is we have to stop insulting 
+these signals by saying they're a sign of weakness, or madness 
+or purely biological, except for a tiny number of people. We need to 
+start listening to these signals, because they're telling us 
+something we really need to hear. It's only when we truly listen to 
+these signals, and we honor these signals and respect these signals, 
+that we're going to begin to see the liberating, nourishing, 
+deeper solutions. The cows that are waiting all around us. 
+
+
+[[https://www.youtube.com/watch?v=17fbxRQgMlU][Sir Ken Robinson: Finding Your Element]]
+
 
 ** Rust China                                         :rust:china:@community:
 :PROPERTIES:
