--- a/notes.org
+++ b/notes.org
@@ -3309,6 +3309,7 @@ these signals, and we honor these signals and respect these signals,
 that we're going to begin to see the liberating, nourishing, 
 deeper solutions. The cows that are waiting all around us. 
 
+[[https://www.youtube.com/watch?v=Xm_2zmX6Akc][Jordan Peterson: How To Deal With Depression]]
 
 [[https://www.youtube.com/watch?v=17fbxRQgMlU][Sir Ken Robinson: Finding Your Element]]
 
