--- a/notes.org
+++ b/notes.org
@@ -425,11 +425,6 @@ warning: crate `tbaSubstrate` should have a snake case name
 
 My mood is just like this post: [[https://fasterthanli.me/articles/frustrated-its-not-you-its-rust][Frustrated? It's not you, it's Rust]]
 
-**** TODO
-
-- [ ] Withdraw() function
-
-
 *Failed of using ~ink_prelude~:*
 
 I use ~cargo add ink_prelude~, and it shows in the ~Cargo.toml~ as 
@@ -515,7 +510,10 @@ It built but
 system.ExtrinsicFailed
 #+end_src
 
-_TODO_ figure it out
+**** TODO
+
+- [ ] Withdraw() function
+- [ ] Figure out the deployment bug
 
 
 ** Play with Substrate                   :rust:substrate:blockchain:@hacking:
