--- a/notes.org
+++ b/notes.org
@@ -1804,9 +1804,11 @@ Blog:
 
 *** Official 
 
-https://lisp-lang.org/
+Website: https://lisp-lang.org/
 
-- Style Guide: https://lisp-lang.org/style-guide/
+- Style Guide: 
+  - https://lisp-lang.org/style-guide/
+  - http://labs.ariel-networks.com/cl-style-guide.html
 - Writing Libraries: https://lisp-lang.org/learn/writing-libraries
 - Test with Travis-CI: https://github.com/luismbo/cl-travis
 - SLIME is the “Superior Lisp Interaction Mode for Emacs”: 
@@ -1815,7 +1817,8 @@ https://lisp-lang.org/
 *** Books
 
 - Book list: [[https://lisp-lang.org/books/][Lisp lang books]]
-- A chapter from *Practical Common Lisp*: [[http://www.gigamonkeys.com/book/macros-standard-control-constructs.html][Macros: Standard Control Constructs]]
+- *Structure and interpretation of computer programs*
+- Onlisp
 
 *** Posts
 
@@ -1827,8 +1830,10 @@ https://lisp-lang.org/
 
 *** Macros in Lisp
 
-[[https://lisp-lang.org/learn/macros][Lisp lang Macros]]
-
+- [[https://lisp-lang.org/learn/macros][Lisp lang Macros]]
+- Macro chapters from *Practical Common Lisp*:
+  - [[http://www.gigamonkeys.com/book/macros-standard-control-constructs.html][Macros: Standard Control Constructs]]
+  - [[http://www.gigamonkeys.com/book/macros-defining-your-own.html][Macros: Defining Your Own]]
 
 
 ** Lua-lang                                                    :lua:@hacking:
